--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
     "pretty-quick": "^1.7.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   },
