--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/peerquery/markup-builder#readme",
   "dependencies": {
-    "@babel/runtime": "^7.1.2",
     "dom-parser": "^0.1.5",
+    "markup-tools": "^2.7.0",
     "remarkable": "^1.7.1",
     "sanitize-html": "^1.19.1"
   },
@@ -41,17 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
     "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.1.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
     "pretty-quick": "^1.7.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   },
